--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@active-mdx/core": "^0.8.0",
     "@fontsource/inter": "4.5.2",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
+    "@mdx-js/loader": "^2.0.0",
+    "@mdx-js/react": "^2.0.0",
+    "@next/mdx": "^12.1.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
     "esbuild": "^0.13.13",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
+    "gsap": "^3.9.1",
     "image-size": "1.0.0",
     "mdx-bundler": "^8.0.0",
     "next": "12.0.9",
@@ -28,6 +33,7 @@
     "preact": "^10.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-live": "^2.4.1",
     "reading-time": "1.3.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^0.2.0",
