--- a/tutorials/first-claudiajs-project/package.json
+++ b/tutorials/first-claudiajs-project/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mdx-js/loader": "^2.0.0",
+    "@next/mdx": "^12.1.0",
     "claudia-api-builder": "^4.1.2"
   },
   "devDependencies": {
